--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
   <meta charset="utf-8">
   <title>Responsive Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="banner">
-    <img class="img-flex" src="images/earth-horizon.jpg" alt="">
-    <div class="banner-content">
+  <div class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="wrapper banner">
+        <img class="img-flex" src="images/earth-horizon.jpg" alt="">
+      </div>
       <div>
-        <h1>The Planet Earth</h1>
-        <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-        <a class="button" href="#">Book a star cruise</a>
+        <div class="banner-content">
+          <h1>The Planet Earth</h1>
+          <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+        </div>
+        <div class="button">
+          <a class="btn btn-ghost" href="#">Book a star cruise</a>
+        </div>
       </div>
     </div>
   </div>
