--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="grid">
-    <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="wrapper banner">
-        <img class="img-flex" src="images/earth-horizon.jpg" alt="">
+  <div class="wrapper">
+    <div>
+      <img class="img-flex max-width" src="images/earth-horizon.jpg" alt="">
+    </div>
+    <div class="banner grid grid-middle">
+      <div class="banner-content unit xs-1 s-1 m-1 l-1 push-0 gutter-1-2">
+        <h1>The Planet Earth</h1>
+        <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
       </div>
-      <div>
-        <div class="banner-content">
-          <h1>The Planet Earth</h1>
-          <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-        </div>
-        <div class="button">
-          <a class="btn btn-ghost" href="#">Book a star cruise</a>
-        </div>
+      <div class="button unit xs-1 s-1-2 m-1-2 l-1 pad-0">
+        <a class="btn btn-ghost" href="#">Book a star cruise</a>
       </div>
     </div>
   </div>
