--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper pad-b">
     <div>
-      <img class="img-flex max-width" src="images/earth-horizon.jpg" alt="">
+      <img class="img-flex" src="images/earth-horizon.jpg" alt="">
     </div>
     <div class="banner grid grid-middle">
-      <div class="banner-content unit xs-1 s-1 m-1 l-1 push-0 gutter-1-2">
+      <div class="banner-content unit xs-1 s-1 m-1-2 l-1-2 push-0 gutter-0">
         <h1>The Planet Earth</h1>
         <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
       </div>
-      <div class="button unit xs-1 s-1-2 m-1-2 l-1 pad-0">
+      <div class="button unit xs-1 s-1-2 m-1-2 l-1-2">
         <a class="btn btn-ghost" href="#">Book a star cruise</a>
       </div>
     </div>
